src/objects/Taxonomy_Tagging__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Trade Issue categories.  Values provided by Taxonomy Board.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trade_Issue_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Industry_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related application object</description>
        <label>Related Application</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Taxonomy Tagging</relationshipLabel>
        <relationshipName>Taxonomy_Tagging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Taxonomy Tagging</relationshipLabel>
        <relationshipName>Taxonomy_Tagging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Taxonomy Tagging</relationshipLabel>
        <relationshipName>Taxonomy_Tagging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Taxonomy Tagging</relationshipLabel>
        <relationshipName>Taxonomy_Tagging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_WIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related WIN</label>
        <referenceTo>WIN__c</referenceTo>
        <relationshipLabel>Taxonomy Tagging</relationshipLabel>
        <relationshipName>Taxonomy_Tagging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sector_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <label>Sub-Sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sector__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Sector_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxonomy_One__c</fullName>
        <description>The power of one for this taxonomy object</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxonomy One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Issue__c</fullName>
        <description>Specific trade issues for each trade issue category.  Values provided by Taxonomy Board</description>
        <label>Trade Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Trade_Issue_Trade_Issue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Region__c</fullName>
        <label>Trade Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trade_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital Strategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Taxonomy Tagging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Industry__c</columns>
        <columns>Related_Application__c</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Lead__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Related_WIN__c</columns>
        <columns>Sector__c</columns>
        <columns>Sub_Sector__c</columns>
        <columns>Taxonomy_One__c</columns>
        <columns>Trade_Issue__c</columns>
        <columns>Trade_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IH-{0000}</displayFormat>
        <label>Taxonomy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxonomy Tagging</pluralLabel>
    <recordTypes>
        <fullName>Client_Counseling</fullName>
        <active>true</active>
        <label>Client Counseling</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country</fullName>
        <active>true</active>
        <label>Country</label>
    </recordTypes>
    <recordTypes>
        <fullName>Industry</fullName>
        <active>true</active>
        <label>Industry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade_Issue</fullName>
        <active>true</active>
        <label>Trade Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade_Region</fullName>
        <active>true</active>
        <label>Trade Region</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_Choose_One_Related_Record</fullName>
        <active>true</active>
        <description>The user may only select one related record per entry.</description>
        <errorConditionFormula>( IF(ISBLANK( Related_Organization__c ),0,1) +
IF(ISBLANK( Related_WIN__c),0,1) +
IF(ISBLANK( Related_Case__c ),0,1)+
IF(ISBLANK( Related_Lead__c),0,1) +
IF(ISBLANK( Related_Application__c),0,1)
) &gt; 1</errorConditionFormula>
        <errorMessage>You may only select one Related Record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_One_Taxonomy_Field</fullName>
        <active>true</active>
        <description>Depending on the Record Type, one top level record is required.  For Industry, the Industry field must be filled out; for Country, the Country field must be filled out, etc.</description>
        <errorConditionFormula>OR(AND(ISPICKVAL(Industry__c,&quot;&quot; ), RecordType.Name = &quot;Industry&quot;),
AND(ISPICKVAL(Country__c,&quot;&quot; ), RecordType.Name = &quot;Country&quot;),
AND(ISPICKVAL(Trade_Region__c,&quot;&quot; ), RecordType.Name = &quot;Trade_Region&quot;), AND(ISPICKVAL(Category__c ,&quot;&quot; ), RecordType.Name = &quot;Trade_Issue&quot;)
)</errorConditionFormula>
        <errorMessage>You are required to choose a value before you can save this record.</errorMessage>
    </validationRules>
</CustomObject>